# bonsai

./: .clang-format  .clang-tidy  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-image.yml  ci.yml  cross-arch.yml  docs-site.yml  wheels.yml
benchmarks/: CMakeLists.txt  README.md  airline-2026-07.md  bagging-interaction-probe-2026-07.md  bench_sampler.cpp  bench_split.cpp  bench_tree.cpp  binning-tradeoff-2026-07.md  catboost-scale-edge-2026-07.md  categorical-tradeoff-2026-07.md  feature-subsample-tradeoff-2026-07.md  gpu-pareto-16M-2026-07.md  grinsztajn-2026-07.md  lr-rule-probe-2026-07.md  missing-bin-closer-2026-07.md  ordered-boosting-probe-2026-07.md  quality-campaign-2026-07.md  ranking-tradeoff-2026-07.md  resident-objective-2026-07.md  single-card-ceiling-2026-07.md  sparse-tradeoff-2026-07.md  static-k-encoder-probe-2026-07.md  tabarena-cat-probe-2026-07.md
benchmarks/results/: airline-2026-07.jsonl  bagging-interaction-probe-2026-07.jsonl  binning-probe-2026-07.json  cat-tradeoff-2026-07.json  catboost-scale-edge-2026-07.jsonl  code-metrics-2026-07.jsonl  cpu-prefetch-round-2026-07.jsonl  gpu-pareto-16M-2026-07.jsonl  gpu_msd.jsonl  grinsztajn-2026-07-xgb-mcw1.jsonl  grinsztajn-2026-07.jsonl  lr-rule-probe-2026-07.jsonl  ordered-boosting-probe-2026-07.jsonl  quality-campaign-2026-07.jsonl  ranking-tradeoff-2026-07.jsonl  rebaseline-2026-07.jsonl  rebaseline.jsonl  scaling.jsonl  single-card-ceiling-2026-07.jsonl  static-k-encoder-probe-2026-07.jsonl  tabarena-cat-probe-2026-07.jsonl
configs/: a9a.toml  california_housing.toml  covtype.toml  higgs.toml  year_prediction_msd.toml
docker/: ci.Dockerfile  runtime.Dockerfile  start.sh
docs/: STYLE.md  about.md  ai-usage.md  context.md  decisions.md  feature_gap.md  index.md  leafwise_grower.md  proposal.md  report.md
docs/architecture/: 1-dataset.md  10-cuda.md  11-gpu-resident.md  12-grower-backend.md  13-device-binning.md  13-device-residency.md  14-engine-narrative.md  15-device-binning.md  16-compute-dag.md  17-categorical-splits.md  18-manual-bin-edges.md  19-multi-gpu.md  2-histogram.md  3-tree.md  4-objective.md  5-booster.md  6-dispatch.md  7-parallel.md  8-config.md  9-cli.md  README.md
docs/conversations/: 2026-05-02-initial-design.md
docs/design/: api-tour-concepts.md  determinism.md  system-map.md  the-hpc-tension.md
docs/guide/: 0-a-tree-by-hand.md  1-gradient-boosting.md  10-gpu-training.md  11-performance-engineering.md  12-multiclass.md  13-categorical-features.md  2-binning-and-histograms.md  3-finding-splits.md  4-growing-trees.md  5-sampling.md  6-regularization-and-constraints.md  7-early-stopping-and-dart.md  8-feature-importance.md  9-parallelism-and-determinism.md  README.md
docs/hooks/: repo_links.py
docs/javascripts/: katex.js  mermaid-init.js
docs/learn/: timeline.json  timeline.md
docs/lineage/: catboost.md  lightgbm.md  xgboost.md
docs/method/: README.md  benchmark-protocol.md  benchmarking.md  determinism.md  feature-admission.md  how-we-decide.md  instrument-first.md  results.md  what-to-use-when.md
docs/ops/: runpod-runbook.md
docs/reviews/: 2026-05-19-design-review.md  2026-07-03-design-review-cuda.md  2026-07-12-design-review-project.md
docs/use/: api-tour.md  building.md  install.md  make-map.md  parameters.md  parameters.src.json
experiments/nvcc_vs_clang/: README.md  RESULTS.md  bench.cu  run.sh
include/bonsai/: bin_mapper.hpp  bin_mappers.hpp  booster.hpp  dataset.hpp  (+14 more)
scripts/: analyze_scaling.py  bench_categorical.py  bench_gpu.py  bench_scaling.py  compare.py  dag_model.py  docs_lint.py  fetch_a9a.py  fetch_amazon.py  fetch_covtype.py  fetch_higgs.py  fetch_toy.py  fetch_year_msd.py  gpu_pareto.py  measure_complexity.py  model_hash.py  probe_bagging_interaction.py  probe_binning.py  probe_categorical.py  probe_crossed_ts.py  probe_feature_subsample.py  probe_lr_rule.py  probe_missing_bin.py  probe_ordered_boosting.py  probe_ordered_boosting_rung0.py  probe_ranking.py  probe_sparse.py  probe_static_k_encoder.py  probe_tabarena_cat.py  reference_params.py  render_make_map.py  render_params.py  render_results.py  render_timeline.py  run_docs_examples.py  run_tabular_suite.py  setup_gpu_node.sh  wheel_smoke.py  wheel_smoke_cuda.py  wheel_smoke_gpu_absent.py
src/: CMakeLists.txt  bin_mapper.cpp  bin_mappers.cpp  booster.cpp  dataset.cpp  grower.cpp  grower_impl.hpp  ingest_profiler.hpp  level_step.hpp  metric.cpp  objective.cpp  objective_traits.cpp  sampler.cpp  shap.cpp  split.cpp  tree.cpp
src/cli/: bench.cpp  common.cpp  dump.cpp  eval.cpp  fit.cpp  importance.cpp  info.cpp  main.cpp  params.cpp  pipeline.cpp  predict.cpp
src/config/: toml.cpp  toml_dump.cpp
src/cuda/: grower_cuda.cpp  histogram_builder.cu  histogram_builder_stub.cpp  histogram_engine.cu  histogram_engine_stub.cpp  multi_engine.cu  multi_engine_stub.cpp
src/cuda/detail/: device_buffer.cuh  device_context.cu  device_context.cuh  ingest_kernels.cuh  ingest_plane.cuh  kernels.cuh  profile.cuh
src/io/: csv.cpp  model.cpp
src/python/: module.cpp
src/registry/: make_booster.cpp  objective_dispatch.cpp
tests/: CMakeLists.txt
tests/data/: README.md  fixture_v7_regressor.bonsai  fixture_v7_softmax.bonsai  tiny.csv
tests/unit/: test_bin_mapper.cpp  test_bin_mappers.cpp  test_booster.cpp  test_cli_pipeline.cpp  test_csv.cpp  test_cuda_grower.cpp  test_cuda_resident.cpp  test_dataset.cpp  test_demote.cpp  test_dense_tree.cpp  test_eval_baseline.cpp  test_feature_sampling.cpp  test_grower.cpp  test_grower_helpers.hpp  test_histogram.cpp  test_ingest_plane.cpp  test_leafwise_grower.cpp  test_make_booster.cpp  test_metric.cpp  test_model_io.cpp  test_multi_engine.cpp  test_objective.cpp  test_objective_dispatch.cpp  test_objective_traits.cpp  test_oblivious_grower.cpp  test_oblivious_tree.cpp  test_parallel.cpp  test_populate.cpp  test_sampler.cpp  test_shap.cpp  test_split.cpp  test_split_level.cpp  test_split_node.cpp  test_task.cpp  test_toml.cpp  test_tree_constants.hpp  test_typelist.cpp
(+73 files in other folders)
