[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "bonsai-gbt"
version = "0.6.0"
description = "Histogram gradient-boosted trees with a C++23 core"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Daniel M Campos" }]
dependencies = ["numpy>=1.26"]

[tool.scikit-build]
minimum-version = "0.10"
wheel.packages = ["python/bonsai"]
cmake.version = ">=3.25"
build.targets = ["_bonsai"]

[tool.scikit-build.cmake.define]
BONSAI_PYTHON = "ON"
BONSAI_TESTS = "OFF"
BONSAI_OPENMP_STATIC = "ON"

# Ruff: python linting for python/ and scripts/ (make lint-python; version
# pinned in the Makefile the way LLVM is — formatter/linter drift breaks CI).
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "NPY", "RUF"]
# ×/–/— in printed tables and docstrings are house style, not typos.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# The compute-DAG cost table reads as aligned rows; wrapping would break it.
"scripts/dag_model.py" = ["E501"]
