[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "bonsai-gbt"
version = "1.3.0"
description = "Histogram gradient-boosted trees with a C++23 core"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Daniel M Campos" }]
dependencies = ["numpy>=1.26"]
keywords = ["gradient-boosting", "machine-learning", "gbdt", "decision-trees"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
# Everything bonsai.bench needs to reproduce the published benchmark tables:
#   pip install bonsai-gbt[bench] && python -m bonsai.bench.grinsztajn out.jsonl
bench = ["xgboost", "lightgbm", "catboost", "scikit-learn", "pandas", "openml"]

[project.urls]
Repository = "https://github.com/daniel-m-campos/bonsai"
Documentation = "https://daniel-m-campos.github.io/bonsai/"
Changelog = "https://github.com/daniel-m-campos/bonsai/blob/main/CHANGELOG.md"

[tool.scikit-build]
minimum-version = "0.10"
wheel.packages = ["python/bonsai"]
cmake.version = ">=3.25"
build.targets = ["_bonsai"]

[tool.scikit-build.cmake.define]
BONSAI_PYTHON = "ON"
BONSAI_TESTS = "OFF"
# BONSAI_OPENMP_STATIC is set by the wheel jobs (wheels.yml), not here: the
# wheels want a private static libomp to avoid the xgboost/lightgbm libomp
# deadlock, and can vendor a dynamic copy where no libomp.a exists (Linux,
# via auditwheel). An sdist / from-source `pip install` cannot vendor, so it
# must be free to fall back to a plain dynamic link instead of hard-failing
# on a system without a static libomp (issue #134).

# Ruff: python linting for python/ and scripts/ (make lint-python; version
# pinned in the Makefile the way LLVM is — formatter/linter drift breaks CI).
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "NPY", "RUF"]
# ×/–/— in printed tables and docstrings are house style, not typos.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# The compute-DAG cost table reads as aligned rows; wrapping would break it.
"scripts/dag_model.py" = ["E501"]
# Template strings ARE the generated page's one-line markdown paragraphs;
# wrapping them would hard-wrap the rendered prose.
"scripts/render_results.py" = ["E501"]
